--- a/.luarc.json
+++ b/.luarc.json
@@ -1,32 +1,39 @@
 {
+    "Lua.diagnostics.globals": [
+        "ngx"
+    ],
+    "Lua.runtime.version": "LuaJIT",
+    "Lua.workspace.checkThirdParty": false,
+    "Lua.workspace.library": [
+        "${3rd}/OpenResty/library"
+    ],
     "diagnostics": {
-        "globals": [
-        ],
         "disable": [
             "discard-returns",
             "undefined-field",
             "need-check-nil"
         ],
+        "globals": [],
         "neededFileStatus": {
-            "redefined-local": "Any",
-            "unused-vararg": "Any",
-            "unused-function": "Any",
-            "unused-local": "Any",
-            "unused-label": "Any",
             "code-after-break": "Any",
             "empty-block": "Any",
-            "trailing-space": "Any"
+            "redefined-local": "Any",
+            "trailing-space": "Any",
+            "unused-function": "Any",
+            "unused-label": "Any",
+            "unused-local": "Any",
+            "unused-vararg": "Any"
         },
         "severity": {
-            "redefined-local": "Hint",
-            "unused-vararg": "Warning",
-            "unused-function": "Warning",
-            "unused-local": "Warning",
-            "unused-label": "Warning",
             "code-after-break": "Warning",
             "empty-block": "Warning",
+            "redefined-local": "Hint",
             "trailing-space": "Warning",
-            "undefined-global": "Error"
+            "undefined-global": "Error",
+            "unused-function": "Warning",
+            "unused-label": "Warning",
+            "unused-local": "Warning",
+            "unused-vararg": "Warning"
         }
     }
 }
